force-app/main/default/objects/Objective__c/Objective__c.object-meta.xml
<CustomObject>
    <description>Object used to house corporate team and individual objectives.</description>
    <label>Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>