force-app/main/default/objects/Objective__c/fields/Abandoned_Notes__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Notes__c</fullName>
    <description>Detailed notes on why this objective was abandoned.</description>
    <inlineHelpText>Detailed notes on why this objective was abandoned.</inlineHelpText>
    <label>Abandoned Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>