force-app/main/default/objects/Objective__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <description>Date of Objective completion</description>
    <inlineHelpText>Date of Objective completion</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>