force-app/main/default/objects/Objective__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>Date of actual start of Objective</description>
    <inlineHelpText>Date of actual start of Objective</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>