force-app/main/default/objects/Objective__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <description>Sum of all KR percentages divided by the total number of Key Results.</description>
    <formula>IF(X_of_Key_Results__c&gt;0, KR_Percent_Sum__c / X_of_Key_Results__c,  Completion_per__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all KR percentages divided by the total number of Key Results.</inlineHelpText>
    <label>Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>