force-app/main/default/objects/Objective__c/fields/Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notes__c</fullName>
    <description>Notes on completion of this objective. Reflect on learnings.</description>
    <inlineHelpText>Notes on completion of this objective. Reflect on learnings.</inlineHelpText>
    <label>Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>