force-app/main/default/objects/Objective__c/fields/Completion_per__c.field-meta.xml
<CustomField>
    <fullName>Completion_per__c</fullName>
    <description>Used to manually enter completion % if no KR&apos;s used.</description>
    <inlineHelpText>Used to manually enter completion % if no KR&apos;s used.</inlineHelpText>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>