force-app/main/default/objects/Objective__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department the Objective falls under.</description>
    <inlineHelpText>Department the Objective falls under.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Experience</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Compliance and Internal Audit</fullName>
            </value>
            <value>
                <fullName>PRKS</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Learning and Development</fullName>
            </value>
            <value>
                <fullName>People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>