force-app/main/default/objects/Objective__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Objective which this Objective is dependent on. This objective could not stat or complete without the completion of the dependent objective.</description>
    <inlineHelpText>Objective which this Objective is dependent on. This objective could not stat or complete without the completion of the dependent objective.</inlineHelpText>
    <label>Dependency</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Objectives (Dependency)</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>