force-app/main/default/objects/Objective__c/fields/Dependency_Completion__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Completion__c</fullName>
    <description>% Completion of Dependency</description>
    <formula>Dependency__r.Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% Completion of Dependency</inlineHelpText>
    <label>Dependency Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>