force-app/main/default/objects/Objective__c/fields/Desired_Goals__c.field-meta.xml
<CustomField>
    <fullName>Desired_Goals__c</fullName>
    <description>What do you hope to achieve with this objective? Why is it important to the business?</description>
    <inlineHelpText>What do you hope to achieve with this objective? Why is it important to the business?</inlineHelpText>
    <label>Desired Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>