force-app/main/default/objects/Objective__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Score the objectives organizational impact 1-100. The higher the score the more substantial the impact to the organization.</description>
    <inlineHelpText>Score the objectives organizational impact 1-100. The higher the score the more substantial the impact to the organization.</inlineHelpText>
    <label>Impact</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>