force-app/main/default/objects/Objective__c/fields/KR_Percent_Sum__c.field-meta.xml
<CustomField>
    <fullName>KR_Percent_Sum__c</fullName>
    <description>Sum of all KR percentages. Used to Calculate Objective total.</description>
    <inlineHelpText>Sum of all KR percentages. Used to Calculate Objective total.</inlineHelpText>
    <label>KR Percent Sum</label>
    <summarizedField>Key_Result__c.Completion_Percent__c</summarizedField>
    <summaryForeignKey>Key_Result__c.Objective__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>