force-app/main/default/objects/Objective__c/fields/Legal_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Legal_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this objective a legal requirement for the organization?</description>
    <inlineHelpText>Is this objective a legal requirement for the organization?</inlineHelpText>
    <label>Legal Requirement</label>
    <type>Checkbox</type>
</CustomField>