force-app/main/default/objects/Objective__c/fields/Master_Objective__c.field-meta.xml
<CustomField>
    <fullName>Master_Objective__c</fullName>
    <description>Brings in master governing objective from up to 3 levels up.</description>
    <formula>IF(ISBLANK(Parent_Objective__r.Name), Name  ,
IF(ISBLANK(Parent_Objective__r.Parent_Objective__r.Name ), Parent_Objective__r.Name,
IF(ISBLANK(Parent_Objective__r.Parent_Objective__r.Parent_Objective__r.Name),  Parent_Objective__r.Parent_Objective__r.Name ,
&quot;Too Many Parents&quot;)))</formula>
    <inlineHelpText>Brings in master governing objective from up to 3 levels up.</inlineHelpText>
    <label>Master Objective</label>
    <type>Text</type>
</CustomField>