force-app/main/default/objects/Objective__c/fields/Objective_Owner__c.field-meta.xml
<CustomField>
    <fullName>Objective_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ubiquity Employee who owns this Objective</description>
    <inlineHelpText>Ubiquity Employee who owns this Objective</inlineHelpText>
    <label>Objective Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ubiquity Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>