force-app/main/default/objects/Objective__c/fields/Objective_Owner_s_Department__c.field-meta.xml
<CustomField>
    <fullName>Objective_Owner_s_Department__c</fullName>
    <formula>Objective_Owner__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Owner&apos;s Department</label>
    <type>Text</type>
</CustomField>