force-app/main/default/objects/Objective__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner linked to project/objective</description>
    <inlineHelpText>Partner linked to project/objective</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>