force-app/main/default/objects/Objective__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <description>If actual completion date is blank and the target completion date is in the past, objective is past due.</description>
    <formula>IF(ISBLANK( Actual_Completion_Date__c ) &amp;&amp; TODAY() - Target_Completion_Date__c &gt; 0, TRUE, FALSE)</formula>
    <inlineHelpText>If actual completion date is blank and the target completion date is in the past, objective is past due.</inlineHelpText>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>