force-app/main/default/objects/Objective__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person requesting the enhancement</description>
    <inlineHelpText>Person requesting the enhancement</inlineHelpText>
    <label>Requestor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Ubiquity employee</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0013700000JH68lAAD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Objectives (Requestor)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>