force-app/main/default/objects/Objective__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Discovery</fullName>
            </value>
            <value>
                <fullName>2. Analysis</fullName>
            </value>
            <value>
                <fullName>3. Design</fullName>
            </value>
            <value>
                <fullName>4. Development</fullName>
            </value>
            <value>
                <fullName>5. UAT</fullName>
            </value>
            <value>
                <fullName>6. Launch</fullName>
            </value>
            <value>
                <fullName>7. Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>