force-app/main/default/objects/Objective__c/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <description>Date targeted for Objective completion.</description>
    <inlineHelpText>Date targeted for Objective completion.</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>