force-app/main/default/objects/Objective__c/fields/Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Date__c</fullName>
    <description>Date Objective is targeted to start</description>
    <inlineHelpText>Date Objective is targeted to start</inlineHelpText>
    <label>Target Start Date</label>
    <type>Date</type>
</CustomField>