force-app/main/default/objects/Objective__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>What theme does this Objective fall into?</description>
    <inlineHelpText>What theme does this Objective fall into?</inlineHelpText>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workforce Enhancement</fullName>
            </value>
            <value>
                <fullName>Efficiency and Scalability</fullName>
            </value>
            <value>
                <fullName>Self-Service + Usability</fullName>
            </value>
            <value>
                <fullName>Corporate Governance</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>