force-app/main/default/objects/Objective__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Who is this objective for? Project value only to be used outside of OKR tracking.</description>
    <inlineHelpText>Who is this objective for? Project value only to be used outside of OKR tracking.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Corporate Pillar</fullName>
                <isActive>false</isActive>
                <label>Corporate Pillar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>