force-app/main/default/objects/Objective__c/fields/Ubiquity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Manager__c</fullName>
    <description>Manager of Objective Owner</description>
    <formula>Objective_Owner__r.Ubiquity_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Manager of Objective Owner</inlineHelpText>
    <label>Ubiquity Manager</label>
    <type>Text</type>
</CustomField>