force-app/main/default/objects/Objective__c/fields/Voted_For__c.field-meta.xml
<CustomField>
    <fullName>Voted_For__c</fullName>
    <label>Voted For</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>