force-app/main/default/objects/Objective__c/fields/Votes__c.field-meta.xml
<CustomField>
    <fullName>Votes__c</fullName>
    <label>Votes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>