force-app/main/default/objects/Objective__c/fields/X_of_Key_Results__c.field-meta.xml
<CustomField>
    <fullName>X_of_Key_Results__c</fullName>
    <description>Roll-up of # of Key Results</description>
    <inlineHelpText>Roll-up of # of Key Results</inlineHelpText>
    <label># of Key Results</label>
    <summaryForeignKey>Key_Result__c.Objective__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>