force-app/main/default/objects/Objective__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Theme__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>