force-app/main/default/objects/Objective__c/listViews/BI_Projects.listView-meta.xml
<ListView>
    <fullName>BI_Projects</fullName>
    <columns>NAME</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Effort__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Requestor__c</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned,Incomplete,Idea</value>
    </filters>
    <filters>
        <field>Objective_Owner_s_Department__c</field>
        <operation>equals</operation>
        <value>Business Intelligence</value>
    </filters>
    <label>Open BI Projects</label>
</ListView>