force-app/main/default/objects/Objective__c/listViews/CE_s_Open_BI_Projects.listView-meta.xml
<ListView>
    <fullName>CE_s_Open_BI_Projects</fullName>
    <columns>NAME</columns>
    <columns>Completion_per__c</columns>
    <columns>Effort__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned,Incomplete,Idea</value>
    </filters>
    <filters>
        <field>Requesting_Department__c</field>
        <operation>equals</operation>
        <value>Finance &amp; Accounting</value>
    </filters>
    <label>CE&apos;s Open BI Projects</label>
    <sharedTo>
        <group>CSTs_ALL</group>
    </sharedTo>
</ListView>