force-app/main/default/objects/Objective__c/listViews/Marketing_Open_Projects.listView-meta.xml
<ListView>
    <fullName>Marketing_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Completion_per__c</columns>
    <columns>Effort__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned,Incomplete,Idea</value>
    </filters>
    <filters>
        <field>Objective_Owner__c</field>
        <operation>equals</operation>
        <value>Jefferson Baniqued</value>
    </filters>
    <label>Marketing - Open Projects</label>
</ListView>