force-app/main/default/objects/Objective__c/listViews/My_OKR_s.listView-meta.xml
<ListView>
    <fullName>My_OKR_s</fullName>
    <columns>NAME</columns>
    <columns>Completion__c</columns>
    <columns>Completion_per__c</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Theme__c</columns>
    <columns>Impact__c</columns>
    <columns>Priority__c</columns>
    <columns>Target_Start_Date__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned,Incomplete</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Project</value>
    </filters>
    <label>My Open OKRs</label>
</ListView>