force-app/main/default/objects/Objective__c/listViews/My_Open_BI_Projects.listView-meta.xml
<ListView>
    <fullName>My_Open_BI_Projects</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Completion__c</columns>
    <columns>Effort__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Objective_Owner__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Abandoned,Incomplete,Idea</value>
    </filters>
    <label>My Open BI Projects</label>
    <sharedTo>
        <group>BI_Team</group>
    </sharedTo>
</ListView>