force-app/main/default/objects/Objective__c/listViews/Open_BI_Ideas.listView-meta.xml
<ListView>
    <fullName>Open_BI_Ideas</fullName>
    <columns>NAME</columns>
    <columns>Votes__c</columns>
    <columns>Completion_per__c</columns>
    <columns>Effort__c</columns>
    <columns>Impact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Objective_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Project</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Idea</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Business Intelligence</value>
    </filters>
    <label>Open BI Ideas</label>
</ListView>