force-app/main/default/objects/Objective__c/listViews/Recent_Completed_OKR_s.listView-meta.xml
<ListView>
    <fullName>Recent_Completed_OKR_s</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Theme__c</columns>
    <columns>Impact__c</columns>
    <columns>Priority__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Actual_Completion_Date__c</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Recent Completed OKRs</label>
</ListView>